# DataVisual

./: .buildinfo  .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  README.rst  code.html  data.json  examples.html  genindex.html  index.html  objects.inv  pyproject.toml  references.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html  theory.html
.github/workflows/: deploy_workflow.yml  sub_deploy_coverage_badge.yml  sub_deploy_documentation.yml
DataVisual/: NdArray.py  __init__.py  multi_array.py  tables.py  utils.py
DataVisual.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
DataVisual/Tools/: PlotsUtils.py  Tables.py  utils.py
DataVisual/examples/: README.rst
DataVisual/future_table/: base_class.py  tables.py
DataVisual/tools/: directories.py
DataVisual/units/: __init__.py  base_class.py  components.py
_sources/: examples.rst.txt
_static/: basic.css  sphinxdoc.css
developements/: tables.py
docs/source/: conf.py
docs/source/_templates/: layout.html
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_2483d33c44f7240f___init___py.html  z_2483d33c44f7240f_base_class_py.html  z_2483d33c44f7240f_components_py.html  z_86013498e64a639d___init___py.html  z_86013498e64a639d_multi_array_py.html  z_86013498e64a639d_tables_py.html
requirements/: requirements-documentation.txt
tests/: test_api.py  test_dummy.py  test_units.py
