[build-system]
requires = ["setuptools>=40.8.0", "wheel", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DataVisual"
dynamic = ["version"]
description = "A package multidimensional data visualisation."
license = {file = "LICENSE"}
readme = "README.rst"
requires-python = ">=3.10"
authors = [{ name="Martin Poinsinet de Sivry-Houle", email="martin.poinsinet.de.sivry@gmail.com"}]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: Implementation :: CPython',
    'Development Status :: 4 - Beta',
    'Topic :: Scientific/Engineering :: Physics',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Science/Research',
]

keywords = ["data", "visualization"]

dependencies = [
    "numpy==1.*",
    "MPSPlots",
]

[tool.setuptools]
packages = ["DataVisual"]

[tool.setuptools_scm]
write_to = "DataVisual/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

[project.optional-dependencies]
testing = [
    "pytest>=0.6",
    "pytest-cov>=2.0",
    "pytest-json-report==1.5.0",
    "mypy>=0.910",
    "flake8>=3.9",
    "tox>=3.24",
    "coverage==6.5.0"
]

documentation = [
    "numpydoc==1.6.0",
    "sphinx>=5.1.1",
    "sphinx-gallery==0.17.1",
    "sphinx-rtd-theme==2.0.0",
    "pydata-sphinx-theme==0.14.1",
]

[tool.pytest.ini_options]
minversion = "6.0"
xfail_strict = true
log_cli_level = "INFO"
testpaths = [
    "tests/*",
]
addopts = [
    '-v',
    '-rA',
    '-rw',
    '--cov=DataVisual',
    '--cov-report=html'
]

[tool.coverage.run]
source = ['SuPyMode']
omit = [
    '*\__init__.py',
    '*/_version.py',
    '*/directories.py',
]
branch = true
relative_files = true