[build_ext]
inplace=1


[metadata]
name = DataVisual
description = A package multidimensional data visualisation.
version = file: DataVisual/VERSION
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Martin Poinsinet de Sivry
author_email = Martin.poinsinet.de.sivry@gmail.com
platforms = unix, linux, osx, windows
url = https://github.com/MartinPdeS/DataVisual
license = MIT
license_files = LICENSE
readme = README.rst
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research


[options]
packages=find:
include_package_data = true
python_requires >= 3.11

setup_requires =
	setuptools>=69.0.0

install_requires =
    numpy>=1.26.0
    MPSPlots==1.3.19

[options.extras_require]
documentation =
    numpydoc==1.6.0
    sphinx>=5.1.1
    sphinx-gallery==0.15.0
    sphinx-rtd-theme==2.0.0
    pydata-sphinx-theme==0.14.1

testing =
    pytest>=0.6
    pytest-cov>=2.0
    pytest-json-report==1.5.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    coverage==6.5.0

[tool:pytest]
minversion = 6.0
addopts = -ra -q -v
testpaths = tests

[coverage:run]
source = DataVisual

[options.packages.find]
exclude =
    extern
    docs
    tests

[sdist]
formats = zip, gztar


[tool.cibuildwheel]
container-engine = "docker"